# python-serpro

./: README.md  consulta_cpf.yaml  datavalid.yaml  pyproject.toml  test_datavalid.py  update.sh
serpro/: __init__.py  auth.py  py.typed
serpro/consulta_cpf/: __init__.py  client.py
serpro/consulta_cpf/api/: __init__.py
serpro/consulta_cpf/models/: __init__.py  cpf.py  get_cpf_ni_response_400.py
serpro/datavalid/: __init__.py
serpro/datavalid/api/: __init__.py
serpro/datavalid/api/v1/: get.py  (+6 more)
serpro/datavalid/models/: __init__.py  arquivo_answer.py  arquivo_answer_formato.py  cnh_answer.py  cnh_answer_codigo_situacao.py  cnh_biometry_vbeta_1_answer.py  cnh_biometry_vbeta_1_result.py  cnh_cdv_result.py  cnh_result.py  cnh_vbeta_1_answer.py  cnh_vbeta_1_answer_codigo_situacao.py  cnh_vbeta_1_answer_descricao_situacao.py  cnh_vbeta_1_result.py  cnhv1_answer.py  cnhv1_answer_codigo_situacao.py  cnhv1_result.py  cnhv2_answer.py  cnhv2_answer_codigo_situacao.py  codigo_descricao_answer.py  codigo_descricao_result.py  digitais_result.py  digital_answer.py  digital_answer_formato.py  digital_answer_posicao.py  digital_old_answer.py  digital_old_answer_formato.py  digital_old_answer_posicao.py  digital_result.py  digital_result_posicao.py  digital_result_probabilidade.py  documento_answer.py  documento_answer_tipo.py  documento_answer_uf_expedidor.py  documento_result.py  documento_vbeta_1_result.py  endereco_answer.py  endereco_answer_uf.py  endereco_result.py  face_answer.py  face_answer_formato.py  (+118 more)
tests/: credentials.py  test_consulta_cpf.py  test_datavalid.py
(+25 files in other folders)
